[project]
name = "warehouse-app"
version = "0.1.0"
description = "Generic warehouse management — inventory, pick queue, delivery sync"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.3",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "httpx>=0.27",
    "pdfplumber>=0.10",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["warehouse_app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
